# Temp-PSX-XMB

./: CMakeLists.txt  README.md  linker.ld
.github/scripts/: buildRelease.sh  buildToolchain.sh
.github/workflows/: main.yml
src/: main.c
tools/: obj_to_c.py  png_to_c.py
